<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kalkulator</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="cancel">C</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eigth">8</string>
	<string name="nine">9</string>
	<string name="zero">0</string>
	<string name="divide">/</string>
	<string name="multiply">*</string>
	<string name="subtract">-</string>
	<string name="add">+</string>
	<string name="decimal">,</string>
	<string name="equals">=</string>
</resources>