<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#A5A5A5"
	    android:padding="10dp">
	
	    <TextView
	        android:id="@+id/result_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:paddingBottom="4dp"
	        android:paddingLeft="7dp"
	        android:paddingRight="7dp"
	        android:paddingTop="4dp" 
	        style="@style/result_text"/>
	
	    <View
	        android:id="@+id/line_separator"
	        android:layout_height="2dp"
	        android:layout_width="match_parent"
	        android:layout_below="@id/result_text"
	        android:background="#554455" />
	
	    <TableLayout
	        android:id="@+id/buttons_table"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_below="@id/line_separator"
	        android:padding="5dp" >
	
	        <!-- pierwszy rząd -->
	        <TableRow
	            android:id="@+id/first_row"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp" >
	
	            <Button
	                android:layout_span="2"
	                android:tag="@integer/cancel"
	                android:text="@string/cancel" 
	                android:background="@drawable/button_selector_reset"
	                style="@style/button_text"/>
	        </TableRow>
	        
	        <!-- drugi rząd -->
	        <TableRow
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp" >
	
	            <Button
	                android:tag="@integer/one"
	                android:text="@string/one" 
	                android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>
		        <Button
		            android:tag="@integer/two"
		            android:text="@string/two"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>
		        <Button 
		            android:tag="@integer/three"
		            android:text="@string/three"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>
		        <Button
		            android:tag="@integer/divide"
		            android:text="@string/divide"
		            android:background="@drawable/button_selector_operation"
	                style="@style/button_text"/>	        </TableRow>
	        
	        <!-- trzeci rząd -->
	        <TableRow
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp" >
		        <Button
		            android:tag="@integer/four"
		            android:text="@string/four"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>
		        <Button
		            android:tag="@integer/five"
		            android:text="@string/five"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>
		        <Button
		            android:tag="@integer/six"
		            android:text="@string/six"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>	
		        <Button
		            android:tag="@integer/multiply"
		            android:text="@string/multiply"
		            android:background="@drawable/button_selector_operation"
	                style="@style/button_text"/>	                    	        
	        </TableRow>
	        
	        <!-- czwarty rząd -->
	        <TableRow
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp" >
		        <Button
		            android:tag="@integer/seven"
		            android:text="@string/seven"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>	  
		        <Button
		            android:tag="@integer/eigth"
		            android:text="@string/eigth"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>	
		        <Button
		            android:tag="@integer/nine"
		            android:text="@string/nine"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>	
		        <Button
		            android:tag="@integer/subtract"
		            android:text="@string/subtract"
		            android:background="@drawable/button_selector_operation"
	                style="@style/button_text"/>	                                          
	        </TableRow>
	        
	        <!-- piąty rząd -->
	        <TableRow
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp" >
		        <Button
		            android:layout_span="2"
		            android:tag="@integer/zero"
		            android:text="@string/zero"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>	
		        <Button
		            android:tag="@integer/decimal"
		            android:text="@string/decimal"
		            android:background="@drawable/button_selector_digit"
	                style="@style/button_text"/>	   
		        <Button
		            android:tag="@integer/add"
		            android:text="@string/add"
		            android:background="@drawable/button_selector_operation"
	                style="@style/button_text"/>	                             
	        </TableRow>
	        
	        <!-- szósty rząd -->
	        <TableRow
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp" >
	
	            <Button
	                android:layout_span="4"
	                android:tag="@integer/equals"
	                android:text="@string/equals" 
	                android:background="@drawable/button_selector_equals"
	                style="@style/button_text"/>
	        </TableRow>
	    </TableLayout>
	    
	</RelativeLayout>
</LinearLayout>